--- a/database/bot/settings.json
+++ b/database/bot/settings.json
@@ -1,30 +1,31 @@
 {
 	"prefix": "#",
-	"ownerNumber": "6282347260729",
-	"ownername": "RIMURUBOTZ",
-	"botname": "MYBOTZ",
-	"tz": "➪",
+	"ownerNumber": "6281327928962",
+	"ownername": "Alwan Karsa XD",
+	"botname": "Alluka Zoldyck",
+	"session": "session",
+        "tz": "➪",
 	
 	"link1": "https://chat.whatsapp.com/B4qFFc2GFVc1dtRMOXot3I",
 	"link2": "https://chat.whatsapp.com/B4qFFc2GFVc1dtRMOXot3I",
 	"link3": "https://chat.whatsapp.com/B4qFFc2GFVc1dtRMOXot3I",
 	
-	"instagram": "RIMURUBOTZ",
-	"youtube": "RIMURUBOTZ",
-	"tiktok": "NOT",
+	"instagram": "alwan.karsa",
+	"youtube": "-",
+	"tiktok": "animekarsa",
 	"twitter": "NOT",
 	"facebook": "NOT",
 	
 	"donasi": "LIST DONASI :)",
-	"gopay": "082347260729",
-	"dana": "082347260729",
-	"pulsa": "082347260729",
+	"gopay": "081327928962",
+	"dana": "081327928962",
+	"pulsa": "081327928962",
 	
 	"asal": "MAKASSAR",
-	"umur": "9 TAHUN",
+	"umur": "20 TAHUN",
 	"agama": "ISLAM",
-	"gender": "GIRL",
+	"gender": "BOY",
 		
-	"captionfake": "MYBOTZ IN TERVERIFIKASI",
+	"captionfake": "Alluka Zoldyck IN TERVERIFIKASI",
 	"textmenu": "© Whatsapp || @adiwajshing/baileys"
 }
